Add created at info

--- a/views/highlights.mustache
+++ b/views/highlights.mustache
@@ -59,7 +59,7 @@
                                 <strong>{{{html}}}</strong>
 
                                 <footer class="blockquote-footer">
-                                    {{author}} <cite>{{source}}</cite>
+                                    {{author}} <cite>{{source}}</cite> ~ {{created_at_formatted}}
 
                                     {{#tags}}
                                         <br><br>
