Add raw daily amount and comment out lineChart

--- a/views/paths.mustache
+++ b/views/paths.mustache
@@ -56,6 +56,7 @@
                                     {{^expired}}
                                     <div>Active Book Count: <strong>{{active_book_count}}</strong></div>
                                     <div>Done Book Count: <strong>{{done_book_count}}</strong></div>
+                                    <div>Raw Daily: <strong>{{daily_amount_raw}}</strong></div>
                                     {{/expired}}
                                 </div>
                                 <div class="card-footer">
@@ -73,9 +74,9 @@
                             {{/bookPaths}}
                         </div>
 
-                        <div class="my-4">
+                        <!-- <div class="my-4">
                             <div id="lineChart"></div>
-                        </div>
+                        </div> -->
 
                     </div> <!-- .col-12 -->
                 </div> <!-- .row -->
