--- a/views/include/include.mustache
+++ b/views/include/include.mustache
@@ -9,4 +9,6 @@
 <script src='/js/daterangepicker.js'></script>
 <script src="/js/jquery-bootstrap-purr.min.js"></script>
 <script src='/js/select2.min.js'></script>
+<script src='/js/jquery.dataTables.min.js'></script>
+<script src='/js/dataTables.bootstrap4.min.js'></script>
 <script src='/js/functions.js'></script>
