Change table class

--- a/views/all-books.mustache
+++ b/views/all-books.mustache
@@ -31,7 +31,7 @@
                                         data-target="#bookFormModal">Create Book</a>
                                 </div>
                                 <div class="card-body">
-                                    <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
+                                    <table class="table datatables" id="booksDatatable" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>Author</th>
