--- a/views/my-books.mustache
+++ b/views/my-books.mustache
@@ -16,7 +16,7 @@
                             <div class="card">
                                 <div class="card-body">
                                     <h5 class="card-title">My Books</h5>
-                                    <table class="table table-striped table-bordered" id="booksDatatable" width="100%">
+                                    <table class="table datatables" id="booksDatatable" width="100%">
                                         <thead>
                                             <tr>
                                                 <th>Author</th>
@@ -54,7 +54,13 @@
 
     <script>
         $(document).ready(function () {
-
+            $('#booksDatatable').DataTable({
+                autoWidth: true,
+                "lengthMenu": [
+                    [16, 32, 64, -1],
+                    [16, 32, 64, "All"]
+                ]
+            });
         });
     </script>
 </body>
