--- a/views/bookmarks.mustache
+++ b/views/bookmarks.mustache
@@ -40,17 +40,19 @@
                         <div class="card mb-4">
                             <div class="card">
                                 <div class="card-body">
-                                    <table class="table table-striped table-bordered">
+                                    <table class="table datatables" id="bookmarksDatatable" width="100%">
                                         <thead>
                                             <tr>
+                                                <th scope="col">Status</th>
                                                 <th scope="col">Bookmark</th>
+                                                <th scope="col">Date</th>
                                                 <th scope="col">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
                                             {{#bookmarks}}
                                             <tr>
-                                                <td class="go-to-bookmark-highlight" data-uid="{{bookmarkUID}}">
+                                                <td>
                                                     {{#startAction}}
                                                     <span class="badge badge-info btnStatusAction" data-status="1"
                                                         data-uid="{{bookmarkUID}}">New</span>
@@ -64,7 +66,12 @@
                                                     {{#complete}}
                                                     <span class="badge badge-success">Done</span>
                                                     {{/complete}}
+                                                </td>
+                                                <td class="go-to-bookmark-highlight" data-uid="{{bookmarkUID}}">
                                                     <a href="{{bookmark}}" target="_blank">{{title}}</a>
+                                                </td>
+                                                <td>
+                                                    {{created}}
                                                 </td>
                                                 <td>
                                                     <button class="btn btn-sm dropdown-toggle more-horizontal"
@@ -111,7 +118,6 @@
     {{> include}}
     {{> menu }}
     {{> navbar }}
-    {{> add-book }}
 
     <script>
         $(document).ready(function () {
@@ -162,6 +168,15 @@
                     location.reload();
                 }
 
+            });
+
+            $('#bookmarksDatatable').DataTable({
+                autoWidth: true,
+                "lengthMenu": [
+                    [16, 32, 64, -1],
+                    [16, 32, 64, "All"]
+                ],
+                "order": [[ 2, "desc" ]]
             });
 
         });
