Add bookmark category filtering and remove leftovers from url when unsetting tag/category

--- a/views/bookmarks.mustache
+++ b/views/bookmarks.mustache
@@ -36,6 +36,16 @@
                             </div>
                         </div>
 
+                        <div>
+                            {{#bookmarkCategories}}
+                            <a role="button" href="/bookmarks{{#href}}?category={{href}}{{/href}}" class="badge badge-{{badge}}">
+                                <strong>#{{name}}</strong>
+                            </a>
+                            {{/bookmarkCategories}}
+                        </div>
+
+                        <br>
+
                         <!-- simple table -->
                         <div class="card mb-4">
                             <div class="card">
